add more projects

--- a/index.html
+++ b/index.html
@@ -117,7 +117,20 @@
             </div> -->
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-
+                    <div class="col-md-6 text-center">
+                        <h2>Data Visual Hub</h2>
+                        <div class="project">
+                            <div data-toggle="modal" data-target="#dataModal" class="portfolio-box">
+                                <img src="img/portfolio/datavisual.png" class="img-responsive" alt="Go to Data Visual Hub">
+                                <div class="portfolio-box-caption">
+                                    <div class="portfolio-box-caption-content">
+                                        <div class="project-name">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-md-6 text-center">
                         <h2>TextMe</h2>
                         <div class="project">
@@ -146,9 +159,65 @@
                             </div>
                         </div>
                     </div>
-
+                    <div class="col-md-6 text-center">
+                        <h2>Bring It</h2>
+                        <div class="project">
+                            <div data-toggle="modal" data-target="#bringItModal" class="portfolio-box">
+                                <img src="img/portfolio/bringit.png" class="img-responsive" alt="Go to Bring It">
+                                <div class="portfolio-box-caption">
+                                    <div class="portfolio-box-caption-content">
+                                        <div class="project-name">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
+    <!-- Modal -->
+    <div id="dataModal" class="modal fade" role="dialog" tabindex="-1" aria-labelledby="dataModal" aria-hidden="true">
+        <div class="modal-dialog">
+            <!-- Modal content for Data Visual Hub -->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h2 class="modal-title" style="text-align:center;">Data Visual Hub</h2>
+                </div>
+                <div class="modal-body">
+                    <p><strong>Description:</strong> A collection of data visualizations using the D3.js JavaScript library for manipulating documents based on data.</p>
+                    <p><strong>Technologies used:</strong> AngularJS, Node.js, Express.js, D3.js, HTML5, and CSS3.</p>
+                    <div style="text-align:center;">
+                        <button class="btn btn-default btn-lg"><a href="https://github.com/chenyu-ed-lee/data-visual-hub" target="_blank">Visit Here!</a></button>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div><!-- Modal -->
+    <div id="bringItModal" class="modal fade" role="dialog" tabindex="-1" aria-labelledby="bringItModal" aria-hidden="true">
+        <div class="modal-dialog">
+            <!-- Modal content for Bring It -->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h2 class="modal-title" style="text-align:center;">Bring It</h2>
+                </div>
+                <div class="modal-body">
+                    <p><strong>Description:</strong> A web app that helps groups organize small to large events by listing tasks needed to be done, members volunteering for tasks, and helping to keep everything in one place.</p>
+                    <p><strong>Technologies used:</strong> AngularJS, Node.js, Express.js, MongoDB, Materialize, HTML5, and CSS3.</p>
+                    <div style="text-align:center;">
+                        <button class="btn btn-default btn-lg"><a href="https://github.com/chenyu-ed-lee/bring_it" target="_blank">Visit Here!</a></button>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- Modal -->
     <div id="yearbookModal" class="modal fade" role="dialog" tabindex="-1" aria-labelledby="yearbookModal" aria-hidden="true">
         <div class="modal-dialog">
@@ -159,7 +228,7 @@
                     <h2 class="modal-title" style="text-align:center;">Yearbook</h2>
                 </div>
                 <div class="modal-body">
-                    <p>An interactive and dynamic AngularJS yearbook application made for the students of the Coding Dojo May 2015 Cohort.</p>
+                    <p><strong>Description:</strong> An interactive and dynamic AngularJS yearbook application made for the students of the Coding Dojo May 2015 Cohort.</p>
                     <p><strong>Technologies used:</strong> AngularJS, Node.js, Express.js, Twitter Bootstrap, HTML5, and CSS3.</p>
                     <div style="text-align:center;">
                         <button class="btn btn-default btn-lg"><a href="https://yearbook-may-2015.herokuapp.com/" target="_blank">Visit Here!</a></button>
@@ -181,7 +250,7 @@
                     <h2 class="modal-title" style="text-align:center;">TextMe</h2>
                 </div>
                 <div class="modal-body">
-                    <p>TextMe is a simple web application that uses the Twilio API to send SMS notification or reminder to any numbers.</p>
+                    <p><strong>Description:</strong> TextMe is a simple web application that uses the Twilio API to send SMS notification or reminder to any numbers.</p>
                     <p><strong>Technologies used:</strong> Ruby on Rails, Twilio API, Google Materialize, HTML5, and CSS3.</p>
                     <div style="text-align:center;">
                         <button class="btn btn-default btn-lg"><a href="https://text-me-app.herokuapp.com/" target="_blank">Visit Here!</a></button>
